# didactic-waffle

./: .gitignore  cabal.project  flake.nix  hie-direnv.yaml  hydra.cabal
app/: Main.hs
nix/: build-tools.nix  cabal-shell.nix  haskell.nix  lib.nix  pkgs.nix
src/: Hydra.hs
