cabal-version:      3.0
name:               hydra
version:            0.1.0.0
license-file:        LICENSE
author:             Samuel Evans-Powell
maintainer:         mail@sevanspowell.net

common project-config
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
    import:           project-config
    build-depends:    base >=4.7 && <5
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:  Hydra

executable ui
    import:           project-config
    build-depends:    base ^>=4.14.3.0
                    , containers
    hs-source-dirs:   app
    default-language: Haskell2010
    main-is:          Main.hs
